<resources>
    <string name="app_name">The Acme Electronics Shop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="need_account">Need an account? Sign Up</string>
    <string name="name">Name</string>
    <string name="fiscal_number">Fiscal Number</string>
    <string name="address">Address</string>
    <string name="card_type">Credit Card Type</string>
    <string name="card_number">Credit Card Number</string>
    <string name="card_validity">Validity</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="wallet">Wallet</string>
    <string name="tv_start_value"><![CDATA[-->]]></string>
    <string name="email">Email</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="add_item">Add Item</string>
    <string name="pay">Pay</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="price_10">Price : 10</string>
    <string name="past_transactions">Past Transactions</string>
    <string name="transaction_number">Transaction #PT56748</string>
    <string name="date_example">13/03/2022</string>
    <string name="price_example">189,99€</string>
    <string name="quantity">100</string>
    <string name="transaction_id">Transaction ID:</string>
    <string name="_2345">#2345</string>
    <string name="date">Date:</string>
    <string name="_23_04_2022">23/04/2022</string>
    <string name="content">Content:</string>
    <string name="total">Total:</string>
    <string name="_1000_00">1000$00</string>
    <string name="logout">Logout</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
</resources>