<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Register">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:title="Register"
        app:titleTextColor="#000000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:drawablePadding="10dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingBottom="20dp"></EditText>

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:drawablePadding="10dp"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:paddingBottom="20dp">

            </EditText>

            <EditText
                android:id="@+id/fiscal_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:drawablePadding="10dp"
                android:hint="@string/fiscal_number"
                android:inputType="number"
                android:maxLength="9"
                android:paddingBottom="20dp"
                tools:ignore="TextContrastCheck">

            </EditText>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fiscal_number"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="20dp">

            </EditText>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="20dp" />

            <EditText
                android:id="@+id/card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:drawablePadding="25dp"
                android:hint="@string/card_number"
                android:inputType="number"
                android:paddingBottom="20dp" />

            <LinearLayout
                android:id="@+id/card_type_validity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_number"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/card_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/credit_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/credit" />

                    <RadioButton
                        android:id="@+id/debit_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/debit" />
                </RadioGroup>

                <EditText
                    android:id="@+id/card_validity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:autofillHints=""
                    android:drawablePadding="10dp"
                    android:hint="@string/card_validity"
                    android:inputType="text"
                    android:paddingBottom="20dp" />

            </LinearLayout>

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/card_type_validity"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="40dp"
                android:background="#00008b"
                android:enabled="true"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>