<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:title="      Log In"
        app:titleTextColor="#000000" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_login"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingBottom="20dp"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="20dp"
        android:drawablePadding="10dp"
        android:paddingBottom="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/forgot_password"
        android:textColor="#616161"
        android:textSize="15sp" />

    <Button

        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/forgot_password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="#00008b"
        android:onClick="onclick"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/activity_main_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_marginTop="30dp"
        android:text="@string/need_account"
        android:textAlignment="center"
        android:textSize="15sp" />

    <!--- RETIRAR MAIS TARDE -->
    <TextView
        android:id="@+id/activity_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_link"
        android:layout_marginTop="30dp"
        android:text="@string/need_account"
        android:textAlignment="center"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bt_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/activity_link"
        android:text="GET QR CODE" />

    <Button
        android:id="@+id/bt_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/bt_qr"
        android:text="SCAN CODE" />


</RelativeLayout>